[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/HudWeb.gd" type="Script" id=1]
[ext_resource path="res://assets/images/MenuScreen.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/ABeeZee-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/background/boga.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartScreen" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="NewGame" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 426.0
margin_right = 200.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 1 )
text = "NEW GAME"

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 634.0
margin_right = 200.0
margin_bottom = 764.0
custom_fonts/font = SubResource( 3 )
text = "CREDITS"

[node name="Boga" type="Sprite" parent="."]
position = Vector2( 846, 413 )
texture = ExtResource( 4 )

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
